[package]
name = "rpc-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
axum = ["dep:axum", "dep:http-body-util"]
tauri = ["dep:tauri"]
prisma = []

[dependencies]
specta.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

axum = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tauri = { workspace = true, optional = true }
