[package]
name = "rpc-rs"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

description = """
A blazingly fast, lightweight, and type-safe RPC/IPC framework for
Rust and Web/Tauri-based applications, based on `specta`.
"""

[features]
default = []
axum = ["dep:axum", "dep:http-body-util"]
tauri = ["dep:tauri"]
prisma = []

[dependencies]
specta.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

axum = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tauri = { workspace = true, optional = true }
