[package]
name = "plugin_ksp1"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api.workspace = true
query.workspace = true
base64.workspace = true
const_format.workspace = true
